--- a/my-first-app/src/app/components/budget-table/budget-table.component.html
+++ b/my-first-app/src/app/components/budget-table/budget-table.component.html
@@ -86,5 +86,7 @@
             <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
         </table>
     </div>
-
+    <div class="table-container chart">
+      <div [id]="chartId"></div>
+    </div>
 </div>
