--- a/my-first-app/src/app/components/budget/budget.component.html
+++ b/my-first-app/src/app/components/budget/budget.component.html
@@ -1,7 +1,15 @@
 <div class="content">
 
-    <app-budget-table *ngFor="let t of tables" [table]="t" (onDelete)="deletePoint($event)" (onAdd)="addPoint($event)" (onEdit)="editPoint($event)"></app-budget-table>
+    <div class="content-block">
+        <app-budget-table [table]="incomeTable" (onDelete)="deletePoint($event)" (onAdd)="addPoint($event)" (onEdit)="editPoint($event)"></app-budget-table>
+        <app-budget-chart [chartData]="incomeChartData" [table]="incomeTable"></app-budget-chart> 
+    </div>
 
+    <div class="content-block">
+        <app-budget-table [table]="outcomeTable" (onDelete)="deletePoint($event)" (onAdd)="addPoint($event)" (onEdit)="editPoint($event)"></app-budget-table>
+        <app-budget-chart [chartData]="outcomeChartData" [table]="outcomeTable"></app-budget-chart>
+    </div>
+    
 </div>
 
 <div class="log-buttons">
