--- a/my-first-app/src/app/components/budget/budget.component.scss
+++ b/my-first-app/src/app/components/budget/budget.component.scss
@@ -7,7 +7,9 @@
     box-sizing: border-box;
 }
 
-app-budget-table {
+.content-block {
+    display: flex;
+    flex-direction: column;
     flex: 1;
 }
 
@@ -43,9 +45,12 @@ app-budget-table {
     }
 
     app-budget-table {
+        overflow-x: scroll;
+    }
+
+    .content-block {
         width: 100%;
         padding: 5px 0px;
-        overflow-x: scroll;
     }
 }
 
